# discord-py-component

./: LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-publish.yml
discordcomponents/: README.md  components.py  components.txt  httppatch.py  init_.py
examples/: README.md  container_combo.py  section_label_demo.py  thumbnail_media_demo.py
github/workflows/: publish-pypi.yml  python-package-conda.yml
tests/: test_components.py
